@@ -23,6 +23,7 @@ import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
 
+import org.opensearch.OpenSearchStatusException;
 import org.opensearch.action.ActionRequest;
 import org.opensearch.action.support.ActionFilters;
 import org.opensearch.action.support.HandledTransportAction;
@@ -34,6 +35,7 @@ import org.opensearch.common.settings.Settings;
 import org.opensearch.common.util.concurrent.ThreadContext;
 import org.opensearch.commons.authuser.User;
 import org.opensearch.core.action.ActionListener;
+import org.opensearch.core.rest.RestStatus;
 import org.opensearch.core.xcontent.NamedXContentRegistry;
 import org.opensearch.ml.cluster.DiscoveryNodeHelper;
 import org.opensearch.ml.common.FunctionName;
@@ -41,7 +43,6 @@ import org.opensearch.ml.common.MLModel;
 import org.opensearch.ml.common.MLTask;
 import org.opensearch.ml.common.MLTaskState;
 import org.opensearch.ml.common.MLTaskType;
-import org.opensearch.ml.common.exception.MLValidationException;
 import org.opensearch.ml.common.model.MLModelState;
 import org.opensearch.ml.common.transport.deploy.MLDeployModelAction;
 import org.opensearch.ml.common.transport.deploy.MLDeployModelInput;
@@ -64,7 +65,6 @@ import org.opensearch.threadpool.ThreadPool;
 import org.opensearch.transport.TransportService;
 
 import com.google.common.annotations.VisibleForTesting;
-import com.google.common.collect.ImmutableMap;
 
 import lombok.extern.log4j.Log4j2;
 
@@ -76,6 +76,8 @@ public class TransportDeployModelAction extends HandledTransportAction<ActionReq
     ClusterService clusterService;
     ThreadPool threadPool;
     Client client;
+
+    Settings settings;
     NamedXContentRegistry xContentRegistry;
     DiscoveryNodeHelper nodeFilter;
     MLTaskDispatcher mlTaskDispatcher;
@@ -118,6 +120,7 @@ public class TransportDeployModelAction extends HandledTransportAction<ActionReq
         this.mlStats = mlStats;
         this.modelAccessControlHelper = modelAccessControlHelper;
         this.mlFeatureEnabledSetting = mlFeatureEnabledSetting;
+        this.settings = settings;
         allowCustomDeploymentPlan = ML_COMMONS_ALLOW_CUSTOM_DEPLOYMENT_PLAN.get(settings);
         clusterService
             .getClusterSettings()
@@ -129,133 +132,49 @@ public class TransportDeployModelAction extends HandledTransportAction<ActionReq
         MLDeployModelRequest deployModelRequest = MLDeployModelRequest.fromActionRequest(request);
         String modelId = deployModelRequest.getModelId();
         User user = RestActionUtils.getUserContext(client);
+        boolean isSuperAdmin = isSuperAdminUserWrapper(clusterService, client);
         String[] excludes = new String[] { MLModel.MODEL_CONTENT_FIELD, MLModel.OLD_MODEL_CONTENT_FIELD };
 
         try (ThreadContext.StoredContext context = client.threadPool().getThreadContext().stashContext()) {
             ActionListener<MLDeployModelResponse> wrappedListener = ActionListener.runBefore(listener, () -> context.restore());
             mlModelManager.getModel(modelId, null, excludes, ActionListener.wrap(mlModel -> {
                 FunctionName functionName = mlModel.getAlgorithm();
+                Boolean isHidden = mlModel.getIsHidden();
                 if (functionName == FunctionName.REMOTE && !mlFeatureEnabledSetting.isRemoteInferenceEnabled()) {
                     throw new IllegalStateException(REMOTE_INFERENCE_DISABLED_ERR_MSG);
                 }
-                modelAccessControlHelper.validateModelGroupAccess(user, mlModel.getModelGroupId(), client, ActionListener.wrap(access -> {
-                    if (!access) {
-                        wrappedListener
-                            .onFailure(new MLValidationException("User Doesn't have privilege to perform this operation on this model"));
+                if (isHidden != null && isHidden) {
+                    if (isSuperAdmin) {
+                        deployModel(deployModelRequest, mlModel, modelId, wrappedListener, listener);
                     } else {
-                        String[] targetNodeIds = deployModelRequest.getModelNodeIds();
-                        boolean deployToAllNodes = targetNodeIds == null || targetNodeIds.length == 0;
-                        if (!allowCustomDeploymentPlan && !deployToAllNodes) {
-                            throw new IllegalArgumentException("Don't allow custom deployment plan");
-                        }
-                        DiscoveryNode[] allEligibleNodes = nodeFilter.getEligibleNodes(functionName);
-                        Map<String, DiscoveryNode> nodeMapping = new HashMap<>();
-                        for (DiscoveryNode node : allEligibleNodes) {
-                            nodeMapping.put(node.getId(), node);
-                        }
-
-                        Set<String> allEligibleNodeIds = Arrays
-                            .stream(allEligibleNodes)
-                            .map(DiscoveryNode::getId)
-                            .collect(Collectors.toSet());
-
-                        List<DiscoveryNode> eligibleNodes = new ArrayList<>();
-                        List<String> nodeIds = new ArrayList<>();
-                        if (!deployToAllNodes) {
-                            for (String nodeId : targetNodeIds) {
-                                if (allEligibleNodeIds.contains(nodeId)) {
-                                    eligibleNodes.add(nodeMapping.get(nodeId));
-                                    nodeIds.add(nodeId);
-                                }
-                            }
-                            String[] workerNodes = mlModelManager.getWorkerNodes(modelId, functionName);
-                            if (workerNodes != null && workerNodes.length > 0) {
-                                Set<String> difference = new HashSet<String>(Arrays.asList(workerNodes));
-                                difference.removeAll(Arrays.asList(targetNodeIds));
-                                if (difference.size() > 0) {
-                                    wrappedListener
-                                        .onFailure(
-                                            new IllegalArgumentException(
-                                                "Model already deployed to these nodes: "
-                                                    + Arrays.toString(difference.toArray(new String[0]))
-                                                    + ", but they are not included in target node ids. Undeploy model from these nodes if don't need them any more."
-                                            )
-                                        );
-                                    return;
-                                }
-                            }
-                        } else {
-                            nodeIds.addAll(allEligibleNodeIds);
-                            eligibleNodes.addAll(Arrays.asList(allEligibleNodes));
-                        }
-                        if (nodeIds.size() == 0) {
-                            wrappedListener.onFailure(new IllegalArgumentException("no eligible node found"));
-                            return;
-                        }
-
-                        log.info("Will deploy model on these nodes: {}", String.join(",", nodeIds));
-                        String localNodeId = clusterService.localNode().getId();
-
-                        FunctionName algorithm = mlModel.getAlgorithm();
-                        // TODO: Track deploy failure
-                        // mlStats.createCounterStatIfAbsent(algorithm, ActionName.DEPLOY,
-                        // MLActionLevelStat.ML_ACTION_REQUEST_COUNT).increment();
-                        MLTask mlTask = MLTask
-                            .builder()
-                            .async(true)
-                            .modelId(modelId)
-                            .taskType(MLTaskType.DEPLOY_MODEL)
-                            .functionName(algorithm)
-                            .createTime(Instant.now())
-                            .lastUpdateTime(Instant.now())
-                            .state(MLTaskState.CREATED)
-                            .workerNodes(nodeIds)
-                            .build();
-                        mlTaskManager.createMLTask(mlTask, ActionListener.wrap(response -> {
-                            String taskId = response.getId();
-                            mlTask.setTaskId(taskId);
-                            if (algorithm == FunctionName.REMOTE) {
-                                mlTaskManager.add(mlTask, nodeIds);
-                                deployRemoteModel(mlModel, mlTask, localNodeId, eligibleNodes, deployToAllNodes, listener);
-                                return;
-                            }
-                            try {
-                                mlTaskManager.add(mlTask, nodeIds);
+                        wrappedListener
+                            .onFailure(
+                                new OpenSearchStatusException(
+                                    "User doesn't have privilege to perform this operation on this model",
+                                    RestStatus.FORBIDDEN
+                                )
+                            );
+                    }
+                } else {
+                    modelAccessControlHelper
+                        .validateModelGroupAccess(user, mlModel.getModelGroupId(), client, ActionListener.wrap(access -> {
+                            if (!access) {
                                 wrappedListener
-                                    .onResponse(new MLDeployModelResponse(taskId, MLTaskType.DEPLOY_MODEL, MLTaskState.CREATED.name()));
-                                threadPool
-                                    .executor(DEPLOY_THREAD_POOL)
-                                    .execute(
-                                        () -> updateModelDeployStatusAndTriggerOnNodesAction(
-                                            modelId,
-                                            taskId,
-                                            mlModel,
-                                            localNodeId,
-                                            mlTask,
-                                            eligibleNodes,
-                                            deployToAllNodes
+                                    .onFailure(
+                                        new OpenSearchStatusException(
+                                            "User doesn't have privilege to perform this operation on this model",
+                                            RestStatus.FORBIDDEN
                                         )
                                     );
-                            } catch (Exception ex) {
-                                log.error("Failed to deploy model", ex);
-                                mlTaskManager
-                                    .updateMLTask(
-                                        taskId,
-                                        ImmutableMap.of(STATE_FIELD, FAILED, ERROR_FIELD, MLExceptionUtils.getRootCauseMessage(ex)),
-                                        TASK_SEMAPHORE_TIMEOUT,
-                                        true
-                                    );
-                                wrappedListener.onFailure(ex);
+                            } else {
+                                deployModel(deployModelRequest, mlModel, modelId, wrappedListener, listener);
                             }
-                        }, exception -> {
-                            log.error("Failed to create deploy model task for " + modelId, exception);
-                            wrappedListener.onFailure(exception);
+                        }, e -> {
+                            log.error("Failed to Validate Access for ModelId " + modelId, e);
+                            wrappedListener.onFailure(e);
                         }));
-                    }
-                }, e -> {
-                    log.error("Failed to Validate Access for ModelId " + modelId, e);
-                    wrappedListener.onFailure(e);
-                }));
+                }
+
             }, e -> {
                 log.error("Failed to retrieve the ML model with ID: " + modelId, e);
                 wrappedListener.onFailure(e);
@@ -265,6 +184,119 @@ public class TransportDeployModelAction extends HandledTransportAction<ActionReq
             listener.onFailure(e);
         }
 
+    }
+
+    private void deployModel(
+        MLDeployModelRequest deployModelRequest,
+        MLModel mlModel,
+        String modelId,
+        ActionListener<MLDeployModelResponse> wrappedListener,
+        ActionListener<MLDeployModelResponse> listener
+    ) {
+        String[] targetNodeIds = deployModelRequest.getModelNodeIds();
+        boolean deployToAllNodes = targetNodeIds == null || targetNodeIds.length == 0;
+        if (!allowCustomDeploymentPlan && !deployToAllNodes) {
+            throw new IllegalArgumentException("Don't allow custom deployment plan");
+        }
+        DiscoveryNode[] allEligibleNodes = nodeFilter.getEligibleNodes(mlModel.getAlgorithm());
+        Map<String, DiscoveryNode> nodeMapping = new HashMap<>();
+        for (DiscoveryNode node : allEligibleNodes) {
+            nodeMapping.put(node.getId(), node);
+        }
+
+        Set<String> allEligibleNodeIds = Arrays.stream(allEligibleNodes).map(DiscoveryNode::getId).collect(Collectors.toSet());
+
+        List<DiscoveryNode> eligibleNodes = new ArrayList<>();
+        List<String> nodeIds = new ArrayList<>();
+        if (!deployToAllNodes) {
+            for (String nodeId : targetNodeIds) {
+                if (allEligibleNodeIds.contains(nodeId)) {
+                    eligibleNodes.add(nodeMapping.get(nodeId));
+                    nodeIds.add(nodeId);
+                }
+            }
+            String[] workerNodes = mlModelManager.getWorkerNodes(modelId, mlModel.getAlgorithm());
+            if (workerNodes != null && workerNodes.length > 0) {
+                Set<String> difference = new HashSet<String>(Arrays.asList(workerNodes));
+                difference.removeAll(Arrays.asList(targetNodeIds));
+                if (difference.size() > 0) {
+                    wrappedListener
+                        .onFailure(
+                            new IllegalArgumentException(
+                                "Model already deployed to these nodes: "
+                                    + Arrays.toString(difference.toArray(new String[0]))
+                                    + ", but they are not included in target node ids. Undeploy model from these nodes if don't need them any more."
+                            )
+                        );
+                    return;
+                }
+            }
+        } else {
+            nodeIds.addAll(allEligibleNodeIds);
+            eligibleNodes.addAll(Arrays.asList(allEligibleNodes));
+        }
+        if (nodeIds.size() == 0) {
+            wrappedListener.onFailure(new IllegalArgumentException("no eligible node found"));
+            return;
+        }
+
+        log.info("Will deploy model on these nodes: {}", String.join(",", nodeIds));
+        String localNodeId = clusterService.localNode().getId();
+
+        FunctionName algorithm = mlModel.getAlgorithm();
+        // TODO: Track deploy failure
+        // mlStats.createCounterStatIfAbsent(algorithm, ActionName.DEPLOY,
+        // MLActionLevelStat.ML_ACTION_REQUEST_COUNT).increment();
+        MLTask mlTask = MLTask
+            .builder()
+            .async(true)
+            .modelId(modelId)
+            .taskType(MLTaskType.DEPLOY_MODEL)
+            .functionName(algorithm)
+            .createTime(Instant.now())
+            .lastUpdateTime(Instant.now())
+            .state(MLTaskState.CREATED)
+            .workerNodes(nodeIds)
+            .build();
+        mlTaskManager.createMLTask(mlTask, ActionListener.wrap(response -> {
+            String taskId = response.getId();
+            mlTask.setTaskId(taskId);
+            if (algorithm == FunctionName.REMOTE) {
+                mlTaskManager.add(mlTask, nodeIds);
+                deployRemoteModel(mlModel, mlTask, localNodeId, eligibleNodes, deployToAllNodes, listener);
+                return;
+            }
+            try {
+                mlTaskManager.add(mlTask, nodeIds);
+                wrappedListener.onResponse(new MLDeployModelResponse(taskId, MLTaskType.DEPLOY_MODEL, MLTaskState.CREATED.name()));
+                threadPool
+                    .executor(DEPLOY_THREAD_POOL)
+                    .execute(
+                        () -> updateModelDeployStatusAndTriggerOnNodesAction(
+                            modelId,
+                            taskId,
+                            mlModel,
+                            localNodeId,
+                            mlTask,
+                            eligibleNodes,
+                            deployToAllNodes
+                        )
+                    );
+            } catch (Exception ex) {
+                log.error("Failed to deploy model", ex);
+                mlTaskManager
+                    .updateMLTask(
+                        taskId,
+                        Map.of(STATE_FIELD, FAILED, ERROR_FIELD, MLExceptionUtils.getRootCauseMessage(ex)),
+                        TASK_SEMAPHORE_TIMEOUT,
+                        true
+                    );
+                wrappedListener.onFailure(ex);
+            }
+        }, exception -> {
+            log.error("Failed to create deploy model task for " + modelId, exception);
+            wrappedListener.onFailure(exception);
+        }));
     }
 
     @VisibleForTesting
@@ -300,7 +332,7 @@ public class TransportDeployModelAction extends HandledTransportAction<ActionReq
         mlModelManager
             .updateModel(
                 mlModel.getModelId(),
-                ImmutableMap
+                Map
                     .of(
                         MLModel.MODEL_STATE_FIELD,
                         MLModelState.DEPLOYING,
@@ -326,7 +358,7 @@ public class TransportDeployModelAction extends HandledTransportAction<ActionReq
     ) {
         return ActionListener.wrap(r -> {
             if (mlTaskManager.contains(taskId)) {
-                mlTaskManager.updateMLTask(taskId, ImmutableMap.of(STATE_FIELD, MLTaskState.RUNNING), TASK_SEMAPHORE_TIMEOUT, false);
+                mlTaskManager.updateMLTask(taskId, Map.of(STATE_FIELD, MLTaskState.RUNNING), TASK_SEMAPHORE_TIMEOUT, false);
             }
             listener.onResponse(new MLDeployModelResponse(taskId, MLTaskType.DEPLOY_MODEL, MLTaskState.COMPLETED.name()));
         }, e -> {
@@ -334,11 +366,11 @@ public class TransportDeployModelAction extends HandledTransportAction<ActionReq
             mlTaskManager
                 .updateMLTask(
                     taskId,
-                    ImmutableMap.of(MLTask.ERROR_FIELD, MLExceptionUtils.getRootCauseMessage(e), STATE_FIELD, FAILED),
+                    Map.of(MLTask.ERROR_FIELD, MLExceptionUtils.getRootCauseMessage(e), STATE_FIELD, FAILED),
                     TASK_SEMAPHORE_TIMEOUT,
                     true
                 );
-            mlModelManager.updateModel(modelId, ImmutableMap.of(MLModel.MODEL_STATE_FIELD, MLModelState.DEPLOY_FAILED));
+            mlModelManager.updateModel(modelId, Map.of(MLModel.MODEL_STATE_FIELD, MLModelState.DEPLOY_FAILED));
             listener.onFailure(e);
         });
     }
@@ -368,25 +400,25 @@ public class TransportDeployModelAction extends HandledTransportAction<ActionReq
         );
         ActionListener<MLDeployModelNodesResponse> actionListener = ActionListener.wrap(r -> {
             if (mlTaskManager.contains(taskId)) {
-                mlTaskManager.updateMLTask(taskId, ImmutableMap.of(STATE_FIELD, MLTaskState.RUNNING), TASK_SEMAPHORE_TIMEOUT, false);
+                mlTaskManager.updateMLTask(taskId, Map.of(STATE_FIELD, MLTaskState.RUNNING), TASK_SEMAPHORE_TIMEOUT, false);
             }
         }, e -> {
             log.error("Failed to deploy model " + modelId, e);
             mlTaskManager
                 .updateMLTask(
                     taskId,
-                    ImmutableMap.of(MLTask.ERROR_FIELD, MLExceptionUtils.getRootCauseMessage(e), STATE_FIELD, FAILED),
+                    Map.of(MLTask.ERROR_FIELD, MLExceptionUtils.getRootCauseMessage(e), STATE_FIELD, FAILED),
                     TASK_SEMAPHORE_TIMEOUT,
                     true
                 );
-            mlModelManager.updateModel(modelId, ImmutableMap.of(MLModel.MODEL_STATE_FIELD, MLModelState.DEPLOY_FAILED));
+            mlModelManager.updateModel(modelId, Map.of(MLModel.MODEL_STATE_FIELD, MLModelState.DEPLOY_FAILED));
         });
 
         List<String> workerNodes = eligibleNodes.stream().map(n -> n.getId()).collect(Collectors.toList());
         mlModelManager
             .updateModel(
                 modelId,
-                ImmutableMap
+                Map
                     .of(
                         MLModel.MODEL_STATE_FIELD,
                         MLModelState.DEPLOYING,
@@ -403,6 +435,12 @@ public class TransportDeployModelAction extends HandledTransportAction<ActionReq
                         actionListener::onFailure
                     )
             );
+    }
+
+    // this method is only to stub static method.
+    @VisibleForTesting
+    boolean isSuperAdminUserWrapper(ClusterService clusterService, Client client) {
+        return RestActionUtils.isSuperAdminUser(clusterService, client);
     }
 
 }
